--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -130,7 +130,7 @@
    "source": [
     "# PyTorch TensorBoard support\n",
     "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "writer = SummaryWriter('ocr/tests')\n",
+    "writer = SummaryWriter('temp/tests')\n",
     "\n",
     "if torch.cuda.is_available():       \n",
     "    device = torch.device(\"cuda\")\n",
@@ -152,7 +152,7 @@
     "# set parameters here\n",
     "# ====================\n",
     "\n",
-    "title = 'test10'\n",
+    "title = 'cnn-test1'\n",
     "epochs = 40\n",
     "\n",
     "vocab_size=len(ch2idx)\n",
@@ -160,12 +160,16 @@
     "hidden_size = 100\n",
     "num_classes = 2\n",
     "rnn_layers = 1\n",
-    "dropout = 0.5\n",
+    "\n",
+    "num_filters = [100, 100, 100]\n",
+    "kernel_sizes = [21, 21, 21]\n",
+    "\n",
+    "dropout = 0.0\n",
     "\n",
     "learning_rate = 0.001\n",
     "weight_decay = 1e-4\n",
     "\n",
-    "model_name=\"RNN\"\n",
+    "model_name=\"CNN\"\n",
     "optim_name=\"Adam\"\n",
     "loss_fn_name=\"CEL\"\n",
     "\n",
@@ -182,28 +186,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "doing with pretrained model!!!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/arise/anaconda3/lib/python3.9/site-packages/torch/nn/modules/rnn.py:62: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.5 and num_layers=1\n",
-      "  warnings.warn(\"dropout option adds dropout after all but last \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OCR(\n",
+      "doing with pretrained model!!!\n",
+      "OCR_cnn(\n",
       "  (emb): Embedding(133, 200)\n",
-      "  (lstm1): RNN(\n",
-      "    (rnn): LSTM(200, 100, batch_first=True, dropout=0.5, bidirectional=True)\n",
+      "  (cnn1): CNN(\n",
+      "    (conv1d_list): ModuleList(\n",
+      "      (0): Conv1d(200, 100, kernel_size=(9,), stride=(1,))\n",
+      "      (1): Conv1d(200, 100, kernel_size=(9,), stride=(1,))\n",
+      "    )\n",
+      "    (dropout): Dropout(p=0.5, inplace=False)\n",
       "  )\n",
-      "  (lstm2): RNN(\n",
-      "    (rnn): LSTM(200, 100, batch_first=True, dropout=0.5, bidirectional=True)\n",
+      "  (cnn2): CNN(\n",
+      "    (conv1d_list): ModuleList(\n",
+      "      (0): Conv1d(200, 100, kernel_size=(9,), stride=(1,))\n",
+      "      (1): Conv1d(200, 100, kernel_size=(9,), stride=(1,))\n",
+      "    )\n",
+      "    (dropout): Dropout(p=0.5, inplace=False)\n",
       "  )\n",
       "  (fc1): Linear(in_features=400, out_features=300, bias=True)\n",
       "  (fc2): Linear(in_features=300, out_features=2, bias=True)\n",
@@ -222,6 +220,8 @@
     "    hidden_size=hidden_size,\n",
     "    num_classes=num_classes,\n",
     "    rnn_layers=rnn_layers,\n",
+    "    num_filters=num_filters,\n",
+    "    kernel_sizes=kernel_sizes,\n",
     "    dropout=dropout,\n",
     "    learning_rate=learning_rate,\n",
     "    weight_decay=weight_decay,\n",
@@ -249,49 +249,52 @@
       "\n",
       " Epoch  |  Train Loss  | Train Acc  | Val Loss | Val Acc | Elapsed\n",
       "--------------------------------------------------------------------------------\n",
-      "   1    |   0.283480   | 89.362140  | 0.190619 | 93.70  | 38.27 \n",
-      "   2    |   0.194682   | 93.041152  | 0.153106 | 95.11  | 38.14 \n",
-      "   3    |   0.168011   | 94.061728  | 0.136969 | 95.30  | 37.88 \n",
-      "   4    |   0.153824   | 94.382716  | 0.126264 | 95.63  | 37.99 \n",
-      "   5    |   0.144881   | 94.880658  | 0.127607 | 95.44  | 38.79 \n",
-      "   6    |   0.139330   | 94.736626  | 0.120104 | 95.37  | 38.04 \n",
-      "   7    |   0.134799   | 94.921811  | 0.118510 | 95.56  | 38.60 \n",
-      "   8    |   0.129360   | 95.172840  | 0.126821 | 95.56  | 38.42 \n",
-      "   9    |   0.125885   | 95.386831  | 0.120865 | 95.59  | 38.22 \n",
-      "  10    |   0.121131   | 95.469136  | 0.138325 | 94.56  | 37.94 \n",
-      "  11    |   0.119269   | 95.703704  | 0.113759 | 95.89  | 38.31 \n",
-      "  12    |   0.119243   | 95.744856  | 0.120672 | 95.44  | 38.13 \n",
-      "  13    |   0.113905   | 95.724280  | 0.125221 | 95.48  | 38.38 \n",
-      "  14    |   0.112941   | 96.016461  | 0.119695 | 95.70  | 38.34 \n",
-      "  15    |   0.112497   | 95.893004  | 0.132414 | 95.33  | 38.29 \n",
-      "  16    |   0.109273   | 96.090535  | 0.118261 | 95.44  | 38.84 \n",
-      "  17    |   0.106819   | 96.218107  | 0.125169 | 95.85  | 38.03 \n",
-      "  18    |   0.104700   | 96.209877  | 0.118161 | 95.70  | 37.88 \n",
-      "  19    |   0.104060   | 96.263374  | 0.122756 | 95.85  | 38.25 \n",
-      "  20    |   0.102568   | 96.325103  | 0.127689 | 95.52  | 38.33 \n",
-      "  21    |   0.096357   | 96.481481  | 0.124724 | 95.11  | 38.35 \n",
-      "  22    |   0.097524   | 96.551440  | 0.116243 | 95.74  | 38.50 \n",
-      "  23    |   0.095091   | 96.580247  | 0.130228 | 95.67  | 38.10 \n",
-      "  24    |   0.095102   | 96.629630  | 0.129898 | 95.15  | 38.26 \n",
-      "  25    |   0.093632   | 96.609053  | 0.111177 | 96.07  | 38.80 \n",
-      "  26    |   0.086883   | 96.781893  | 0.122942 | 95.96  | 38.04 \n",
-      "  27    |   0.089618   | 96.617284  | 0.130197 | 95.78  | 38.22 \n",
-      "  28    |   0.086893   | 96.880658  | 0.115495 | 95.93  | 38.56 \n",
-      "  29    |   0.085189   | 97.028807  | 0.130811 | 95.56  | 38.61 \n",
-      "  30    |   0.081638   | 97.057613  | 0.119230 | 95.96  | 38.63 \n",
-      "  31    |   0.084272   | 96.995885  | 0.119648 | 95.67  | 38.43 \n",
-      "  32    |   0.080471   | 97.213992  | 0.134113 | 95.78  | 38.46 \n",
-      "  33    |   0.080257   | 97.082305  | 0.121462 | 96.04  | 38.60 \n",
-      "  34    |   0.080670   | 97.148148  | 0.127880 | 95.52  | 38.36 \n",
-      "  35    |   0.079512   | 97.222222  | 0.133535 | 95.67  | 38.30 \n",
-      "  36    |   0.082958   | 97.032922  | 0.129082 | 95.93  | 38.32 \n",
-      "  37    |   0.077397   | 97.152263  | 0.126681 | 96.00  | 38.44 \n",
-      "  38    |   0.077560   | 97.230453  | 0.126426 | 95.63  | 38.30 \n",
-      "  39    |   0.073188   | 97.329218  | 0.143509 | 95.70  | 38.14 \n",
-      "  40    |   0.073643   | 97.419753  | 0.131563 | 95.85  | 38.03 \n",
-      "\n",
-      "\n",
-      "Training complete! Best accuracy: 96.07%.\n"
+      "   1    |   0.668461   | 59.732510  | 0.565014 | 69.89  |  9.12 \n",
+      "   2    |   0.581172   | 68.094650  | 0.524993 | 73.63  |  9.13 \n",
+      "   3    |   0.545897   | 71.460905  | 0.473946 | 77.07  |  9.11 \n",
+      "   4    |   0.517235   | 73.572016  | 0.448672 | 77.00  |  9.16 \n",
+      "   5    |   0.492956   | 75.123457  | 0.392489 | 81.93  |  9.07 \n",
+      "   6    |   0.466830   | 76.263374  | 0.403125 | 80.26  |  9.06 \n",
+      "   7    |   0.458219   | 76.983539  | 0.405117 | 78.11  |  9.09 \n",
+      "   8    |   0.454210   | 77.390947  | 0.373339 | 82.96  |  9.10 \n",
+      "   9    |   0.449901   | 77.641975  | 0.368865 | 84.52  |  9.12 \n",
+      "  10    |   0.438141   | 78.427984  | 0.378027 | 83.15  |  9.13 \n",
+      "  11    |   0.438951   | 78.119342  | 0.353513 | 84.22  |  9.13 \n",
+      "  12    |   0.433598   | 78.823045  | 0.376922 | 83.15  |  9.15 \n",
+      "  13    |   0.432235   | 79.000000  | 0.366821 | 81.22  |  9.15 \n",
+      "  14    |   0.428476   | 79.238683  | 0.345035 | 86.00  |  9.15 \n",
+      "  15    |   0.425204   | 79.452675  | 0.341065 | 86.78  |  9.18 \n",
+      "  16    |   0.421020   | 79.687243  | 0.348268 | 85.67  |  9.19 \n",
+      "  17    |   0.417072   | 80.403292  | 0.340176 | 85.44  |  9.10 \n",
+      "  18    |   0.413147   | 80.292181  | 0.327261 | 85.41  |  8.97 \n",
+      "  19    |   0.411506   | 80.551440  | 0.326066 | 87.19  |  9.22 \n",
+      "  20    |   0.410113   | 80.456790  | 0.321517 | 86.30  |  9.23 \n",
+      "  21    |   0.408819   | 80.687243  | 0.311894 | 86.93  |  9.23 \n",
+      "  22    |   0.409206   | 80.864198  | 0.306808 | 87.93  |  9.24 \n",
+      "  23    |   0.404131   | 81.148148  | 0.325178 | 87.41  |  9.23 \n",
+      "  24    |   0.401000   | 81.144033  | 0.314213 | 85.44  |  9.25 \n",
+      "  25    |   0.395695   | 81.386831  | 0.313081 | 87.56  |  9.26 \n",
+      "  26    |   0.395992   | 81.452675  | 0.303907 | 87.89  |  9.27 \n",
+      "  27    |   0.397161   | 81.534979  | 0.302802 | 87.70  |  9.28 \n",
+      "  28    |   0.396192   | 81.670782  | 0.318975 | 89.41  |  9.28 \n",
+      "  29    |   0.390706   | 81.983539  | 0.296061 | 88.85  |  9.28 \n",
+      "  30    |   0.393131   | 81.868313  | 0.320989 | 88.41  |  9.28 \n",
+      "  31    |   0.384661   | 82.308642  | 0.302615 | 87.37  |  9.28 \n",
+      "  32    |   0.385965   | 82.666667  | 0.309734 | 87.78  |  9.29 \n",
+      "  33    |   0.389263   | 81.769547  | 0.298993 | 88.44  |  9.30 \n",
+      "  34    |   0.380828   | 82.576132  | 0.302853 | 88.19  |  9.30 \n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/arise/auto/ocr/src/main.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m trainer\u001b[39m.\u001b[39;49mtrain(\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     epochs\u001b[39m=\u001b[39;49mepochs,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     title\u001b[39m=\u001b[39;49mtitle,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     writer\u001b[39m=\u001b[39;49mwriter,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     train_dataloader\u001b[39m=\u001b[39;49mtrain_dataloader,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     val_dataloader\u001b[39m=\u001b[39;49mval_dataloader,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     device\u001b[39m=\u001b[39;49mdevice,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     model\u001b[39m=\u001b[39;49mmodel,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     optimizer\u001b[39m=\u001b[39;49moptimizer,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     loss_fn\u001b[39m=\u001b[39;49mloss_fn\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m )\n",
+      "File \u001b[0;32m~/auto/ocr/src/trainer.py:61\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(epochs, title, writer, train_dataloader, val_dataloader, device, model, optimizer, loss_fn)\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[39m# Compute loss and accumulate the loss values\u001b[39;00m\n\u001b[1;32m     60\u001b[0m loss \u001b[39m=\u001b[39m loss_fn(logits, labels)\n\u001b[0;32m---> 61\u001b[0m tot_train_loss\u001b[39m.\u001b[39mappend(loss\u001b[39m.\u001b[39;49mitem())\n\u001b[1;32m     63\u001b[0m \u001b[39m# Get the predictions\u001b[39;00m\n\u001b[1;32m     64\u001b[0m preds \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39margmax(logits, dim\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mflatten()\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -311,30 +314,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test loss:  0.13305471306666733\n",
-      "test acc:  95.53333333333333\n",
-      "saved precision and recall results to file!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([0., 1., 1.,  ..., 0., 0., 0.], device='cuda:0'),\n",
-       " tensor([0., 1., 1.,  ..., 0., 0., 0.], device='cuda:0'))"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tester.test(test_dataloader=test_dataloader,\n",
     "            device=device,\n",
@@ -344,24 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "uploaded model graph to tensorboard!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mu.graphModel(train_dataloader, model, writer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
