--- a/src/prototype.ipynb
+++ b/src/prototype.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -29,13 +29,13 @@
      "output_type": "stream",
      "text": [
       "successfully got ch2idx!\n",
-      "0.07% that next line must be omitted.\n"
+      "100.00% that next line must be omitted.\n"
      ]
     }
    ],
    "source": [
-    "first = 'SK㈜와 SK이노베이션은 15일 “테라파워에 2억5000만달러(3270억원)를 투자하기로 했다”고'\n",
-    "second = '밝혔다 SK그룹은 지난해 6월 확대경영회의 이후 SMR 분야 투자를 검토하기 시작, 지난 5월 테라파워와 포괄적 사업협력을 위한 양해각서(MOU)를 체결했다'\n",
+    "first = '이는 어찌보면 정확한 형태소 분석기의 문장 분리 성능이라 하기에 부족한 측면이 있을 수 있다. 하지만 대안이'\n",
+    "second = '부족한 상황에서 다양한 대안을 마련하기 위한 하나의 접근법으로 이해하면 될 것 같다.'\n",
     "\n",
     "predictor.predict(first, second, model)"
    ]
@@ -50,7 +50,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -64,12 +64,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "397704579725e15f5c7cb49fe5f0341eb7531c82d19f2c29d197e8b64ab5776b"
+    "hash": "348b9cd948ce87438be2e622031b2ecfa29bc2d3ecc0fd03127b9a24b30227df"
    }
   }
  },
