--- a/src/prototype.ipynb
+++ b/src/prototype.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = mu.getModel('test10')"
+    "model = mu.getModel('cnn-test10')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -29,13 +29,13 @@
      "output_type": "stream",
      "text": [
       "successfully got ch2idx!\n",
-      "100.00% that next line must be omitted.\n"
+      "42.73% that next line must be omitted.\n"
      ]
     }
    ],
    "source": [
-    "first = '이는 어찌보면 정확한 형태소 분석기의 문장 분리 성능이라 하기에 부족한 측면이 있을 수 있다. 하지만 대안이'\n",
-    "second = '부족한 상황에서 다양한 대안을 마련하기 위한 하나의 접근법으로 이해하면 될 것 같다.'\n",
+    "first = '모니터링해요. 내가 만든 영상을'\n",
+    "second = '구독하고 시청한 사람들의 반응을 살피는 일도 중요해'\n",
     "\n",
     "predictor.predict(first, second, model)"
    ]
