--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -130,7 +130,7 @@
    "source": [
     "# PyTorch TensorBoard support\n",
     "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "writer = SummaryWriter('temp/tests')\n",
+    "writer = SummaryWriter('cnn-ocr/tests')\n",
     "\n",
     "if torch.cuda.is_available():       \n",
     "    device = torch.device(\"cuda\")\n",
@@ -152,7 +152,7 @@
     "# set parameters here\n",
     "# ====================\n",
     "\n",
-    "title = 'cnn-test1'\n",
+    "title = 'cnn-test10'\n",
     "epochs = 40\n",
     "\n",
     "vocab_size=len(ch2idx)\n",
@@ -161,10 +161,10 @@
     "num_classes = 2\n",
     "rnn_layers = 1\n",
     "\n",
-    "num_filters = [100, 100, 100]\n",
-    "kernel_sizes = [21, 21, 21]\n",
+    "num_filters = [100, 200, 100]\n",
+    "kernel_sizes = [15, 21, 14]\n",
     "\n",
-    "dropout = 0.0\n",
+    "dropout = 0.2\n",
     "\n",
     "learning_rate = 0.001\n",
     "weight_decay = 1e-4\n",
@@ -191,22 +191,22 @@
       "  (emb): Embedding(133, 200)\n",
       "  (cnn1): CNN(\n",
       "    (conv1d_list): ModuleList(\n",
-      "      (0): Conv1d(200, 100, kernel_size=(9,), stride=(1,))\n",
-      "      (1): Conv1d(200, 100, kernel_size=(9,), stride=(1,))\n",
+      "      (0): Conv1d(200, 100, kernel_size=(15,), stride=(1,))\n",
+      "      (1): Conv1d(200, 200, kernel_size=(21,), stride=(1,))\n",
+      "      (2): Conv1d(200, 100, kernel_size=(14,), stride=(1,))\n",
       "    )\n",
-      "    (dropout): Dropout(p=0.5, inplace=False)\n",
       "  )\n",
       "  (cnn2): CNN(\n",
       "    (conv1d_list): ModuleList(\n",
-      "      (0): Conv1d(200, 100, kernel_size=(9,), stride=(1,))\n",
-      "      (1): Conv1d(200, 100, kernel_size=(9,), stride=(1,))\n",
+      "      (0): Conv1d(200, 100, kernel_size=(15,), stride=(1,))\n",
+      "      (1): Conv1d(200, 200, kernel_size=(21,), stride=(1,))\n",
+      "      (2): Conv1d(200, 100, kernel_size=(14,), stride=(1,))\n",
       "    )\n",
-      "    (dropout): Dropout(p=0.5, inplace=False)\n",
       "  )\n",
-      "  (fc1): Linear(in_features=400, out_features=300, bias=True)\n",
+      "  (fc1): Linear(in_features=800, out_features=300, bias=True)\n",
       "  (fc2): Linear(in_features=300, out_features=2, bias=True)\n",
-      "  (dp1): Dropout(p=0.5, inplace=False)\n",
-      "  (dp2): Dropout(p=0.5, inplace=False)\n",
+      "  (dp1): Dropout(p=0.2, inplace=False)\n",
+      "  (dp2): Dropout(p=0.2, inplace=False)\n",
       ")\n"
      ]
     }
@@ -249,52 +249,49 @@
       "\n",
       " Epoch  |  Train Loss  | Train Acc  | Val Loss | Val Acc | Elapsed\n",
       "--------------------------------------------------------------------------------\n",
-      "   1    |   0.668461   | 59.732510  | 0.565014 | 69.89  |  9.12 \n",
-      "   2    |   0.581172   | 68.094650  | 0.524993 | 73.63  |  9.13 \n",
-      "   3    |   0.545897   | 71.460905  | 0.473946 | 77.07  |  9.11 \n",
-      "   4    |   0.517235   | 73.572016  | 0.448672 | 77.00  |  9.16 \n",
-      "   5    |   0.492956   | 75.123457  | 0.392489 | 81.93  |  9.07 \n",
-      "   6    |   0.466830   | 76.263374  | 0.403125 | 80.26  |  9.06 \n",
-      "   7    |   0.458219   | 76.983539  | 0.405117 | 78.11  |  9.09 \n",
-      "   8    |   0.454210   | 77.390947  | 0.373339 | 82.96  |  9.10 \n",
-      "   9    |   0.449901   | 77.641975  | 0.368865 | 84.52  |  9.12 \n",
-      "  10    |   0.438141   | 78.427984  | 0.378027 | 83.15  |  9.13 \n",
-      "  11    |   0.438951   | 78.119342  | 0.353513 | 84.22  |  9.13 \n",
-      "  12    |   0.433598   | 78.823045  | 0.376922 | 83.15  |  9.15 \n",
-      "  13    |   0.432235   | 79.000000  | 0.366821 | 81.22  |  9.15 \n",
-      "  14    |   0.428476   | 79.238683  | 0.345035 | 86.00  |  9.15 \n",
-      "  15    |   0.425204   | 79.452675  | 0.341065 | 86.78  |  9.18 \n",
-      "  16    |   0.421020   | 79.687243  | 0.348268 | 85.67  |  9.19 \n",
-      "  17    |   0.417072   | 80.403292  | 0.340176 | 85.44  |  9.10 \n",
-      "  18    |   0.413147   | 80.292181  | 0.327261 | 85.41  |  8.97 \n",
-      "  19    |   0.411506   | 80.551440  | 0.326066 | 87.19  |  9.22 \n",
-      "  20    |   0.410113   | 80.456790  | 0.321517 | 86.30  |  9.23 \n",
-      "  21    |   0.408819   | 80.687243  | 0.311894 | 86.93  |  9.23 \n",
-      "  22    |   0.409206   | 80.864198  | 0.306808 | 87.93  |  9.24 \n",
-      "  23    |   0.404131   | 81.148148  | 0.325178 | 87.41  |  9.23 \n",
-      "  24    |   0.401000   | 81.144033  | 0.314213 | 85.44  |  9.25 \n",
-      "  25    |   0.395695   | 81.386831  | 0.313081 | 87.56  |  9.26 \n",
-      "  26    |   0.395992   | 81.452675  | 0.303907 | 87.89  |  9.27 \n",
-      "  27    |   0.397161   | 81.534979  | 0.302802 | 87.70  |  9.28 \n",
-      "  28    |   0.396192   | 81.670782  | 0.318975 | 89.41  |  9.28 \n",
-      "  29    |   0.390706   | 81.983539  | 0.296061 | 88.85  |  9.28 \n",
-      "  30    |   0.393131   | 81.868313  | 0.320989 | 88.41  |  9.28 \n",
-      "  31    |   0.384661   | 82.308642  | 0.302615 | 87.37  |  9.28 \n",
-      "  32    |   0.385965   | 82.666667  | 0.309734 | 87.78  |  9.29 \n",
-      "  33    |   0.389263   | 81.769547  | 0.298993 | 88.44  |  9.30 \n",
-      "  34    |   0.380828   | 82.576132  | 0.302853 | 88.19  |  9.30 \n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/arise/auto/ocr/src/main.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m trainer\u001b[39m.\u001b[39;49mtrain(\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     epochs\u001b[39m=\u001b[39;49mepochs,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     title\u001b[39m=\u001b[39;49mtitle,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     writer\u001b[39m=\u001b[39;49mwriter,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     train_dataloader\u001b[39m=\u001b[39;49mtrain_dataloader,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     val_dataloader\u001b[39m=\u001b[39;49mval_dataloader,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     device\u001b[39m=\u001b[39;49mdevice,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     model\u001b[39m=\u001b[39;49mmodel,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     optimizer\u001b[39m=\u001b[39;49moptimizer,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     loss_fn\u001b[39m=\u001b[39;49mloss_fn\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m )\n",
-      "File \u001b[0;32m~/auto/ocr/src/trainer.py:61\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(epochs, title, writer, train_dataloader, val_dataloader, device, model, optimizer, loss_fn)\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[39m# Compute loss and accumulate the loss values\u001b[39;00m\n\u001b[1;32m     60\u001b[0m loss \u001b[39m=\u001b[39m loss_fn(logits, labels)\n\u001b[0;32m---> 61\u001b[0m tot_train_loss\u001b[39m.\u001b[39mappend(loss\u001b[39m.\u001b[39;49mitem())\n\u001b[1;32m     63\u001b[0m \u001b[39m# Get the predictions\u001b[39;00m\n\u001b[1;32m     64\u001b[0m preds \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39margmax(logits, dim\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mflatten()\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "   1    |   0.524505   | 72.444444  | 0.356814 | 83.15  | 20.37 \n",
+      "   2    |   0.367531   | 82.432099  | 0.292793 | 86.67  | 20.18 \n",
+      "   3    |   0.326544   | 84.510288  | 0.316835 | 86.70  | 20.24 \n",
+      "   4    |   0.312314   | 85.518519  | 0.272748 | 87.81  | 20.31 \n",
+      "   5    |   0.287882   | 86.864198  | 0.257756 | 89.41  | 20.14 \n",
+      "   6    |   0.272846   | 87.748971  | 0.251782 | 88.89  | 20.26 \n",
+      "   7    |   0.263317   | 88.172840  | 0.272955 | 87.48  | 19.98 \n",
+      "   8    |   0.248802   | 89.230453  | 0.248158 | 89.96  | 20.21 \n",
+      "   9    |   0.243757   | 89.477366  | 0.255687 | 88.44  | 19.97 \n",
+      "  10    |   0.238547   | 89.711934  | 0.243835 | 90.19  | 19.81 \n",
+      "  11    |   0.226808   | 90.366255  | 0.226069 | 90.52  | 20.12 \n",
+      "  12    |   0.223545   | 90.489712  | 0.221298 | 90.70  | 19.86 \n",
+      "  13    |   0.212955   | 90.958848  | 0.254848 | 89.74  | 19.85 \n",
+      "  14    |   0.213337   | 91.037037  | 0.262255 | 88.56  | 19.83 \n",
+      "  15    |   0.203298   | 91.288066  | 0.225899 | 91.00  | 19.82 \n",
+      "  16    |   0.197837   | 91.814815  | 0.229044 | 91.41  | 19.84 \n",
+      "  17    |   0.197451   | 91.687243  | 0.232600 | 90.52  | 19.82 \n",
+      "  18    |   0.190515   | 91.839506  | 0.224233 | 91.44  | 19.86 \n",
+      "  19    |   0.188969   | 92.127572  | 0.209162 | 92.33  | 19.84 \n",
+      "  20    |   0.187532   | 92.382716  | 0.208355 | 91.70  | 19.90 \n",
+      "  21    |   0.183975   | 92.473251  | 0.200648 | 92.26  | 19.97 \n",
+      "  22    |   0.178776   | 92.683128  | 0.213425 | 91.78  | 19.99 \n",
+      "  23    |   0.176887   | 92.641975  | 0.243116 | 90.44  | 20.20 \n",
+      "  24    |   0.182207   | 92.390947  | 0.216841 | 92.37  | 20.11 \n",
+      "  25    |   0.179747   | 92.555556  | 0.194081 | 92.67  | 20.09 \n",
+      "  26    |   0.174760   | 92.884774  | 0.213563 | 91.96  | 20.04 \n",
+      "  27    |   0.175566   | 92.884774  | 0.242485 | 89.74  | 20.12 \n",
+      "  28    |   0.172235   | 92.946502  | 0.207825 | 92.26  | 20.28 \n",
+      "  29    |   0.171458   | 93.152263  | 0.222492 | 91.26  | 20.30 \n",
+      "  30    |   0.174669   | 92.868313  | 0.193631 | 93.22  | 20.21 \n",
+      "  31    |   0.163856   | 93.308642  | 0.211523 | 91.78  | 20.27 \n",
+      "  32    |   0.163602   | 93.465021  | 0.216765 | 91.59  | 20.14 \n",
+      "  33    |   0.169583   | 93.020576  | 0.220941 | 91.63  | 20.19 \n",
+      "  34    |   0.164218   | 93.580247  | 0.216439 | 91.59  | 20.30 \n",
+      "  35    |   0.164338   | 93.444444  | 0.208943 | 91.67  | 20.33 \n",
+      "  36    |   0.169067   | 93.090535  | 0.202815 | 92.70  | 20.36 \n",
+      "  37    |   0.168703   | 93.152263  | 0.214640 | 91.93  | 20.33 \n",
+      "  38    |   0.164399   | 93.403292  | 0.208023 | 92.44  | 20.27 \n",
+      "  39    |   0.161347   | 93.386831  | 0.221126 | 92.19  | 20.15 \n",
+      "  40    |   0.161016   | 93.378601  | 0.195206 | 93.15  | 20.20 \n",
+      "\n",
+      "\n",
+      "Training complete! Best accuracy: 93.22%.\n"
      ]
     }
    ],
@@ -314,9 +311,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test loss:  0.1744551310315728\n",
+      "test acc:  93.53333333333333\n",
+      "saved precision and recall results to file!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1., 0., 0.,  ..., 1., 1., 1.], device='cuda:0'),\n",
+       " tensor([1., 0., 0.,  ..., 1., 1., 1.], device='cuda:0'))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tester.test(test_dataloader=test_dataloader,\n",
     "            device=device,\n",
@@ -326,16 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu.graphModel(train_dataloader, model, writer)"
+    "# mu.graphModel(train_dataloader, model, writer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
