send new rnn ocr

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -130,7 +130,7 @@
    "source": [
     "# PyTorch TensorBoard support\n",
     "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "writer = SummaryWriter('cnn-ocr/tests')\n",
+    "writer = SummaryWriter('rnn-ocr/tests')\n",
     "\n",
     "if torch.cuda.is_available():       \n",
     "    device = torch.device(\"cuda\")\n",
@@ -152,7 +152,7 @@
     "# set parameters here\n",
     "# ====================\n",
     "\n",
-    "title = 'cnn-test10'\n",
+    "title = 'rnn-test11'\n",
     "epochs = 40\n",
     "\n",
     "vocab_size=len(ch2idx)\n",
@@ -164,12 +164,12 @@
     "num_filters = [100, 200, 100]\n",
     "kernel_sizes = [15, 21, 14]\n",
     "\n",
-    "dropout = 0.2\n",
+    "dropout = 0.5\n",
     "\n",
     "learning_rate = 0.001\n",
     "weight_decay = 1e-4\n",
     "\n",
-    "model_name=\"CNN\"\n",
+    "model_name=\"RNN\"\n",
     "optim_name=\"Adam\"\n",
     "loss_fn_name=\"CEL\"\n",
     "\n",
@@ -186,27 +186,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "doing with pretrained model!!!\n",
-      "OCR_cnn(\n",
+      "doing with pretrained model!!!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/arise/anaconda3/lib/python3.9/site-packages/torch/nn/modules/rnn.py:62: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.5 and num_layers=1\n",
+      "  warnings.warn(\"dropout option adds dropout after all but last \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OCR_rnn(\n",
       "  (emb): Embedding(133, 200)\n",
-      "  (cnn1): CNN(\n",
-      "    (conv1d_list): ModuleList(\n",
-      "      (0): Conv1d(200, 100, kernel_size=(15,), stride=(1,))\n",
-      "      (1): Conv1d(200, 200, kernel_size=(21,), stride=(1,))\n",
-      "      (2): Conv1d(200, 100, kernel_size=(14,), stride=(1,))\n",
-      "    )\n",
+      "  (lstm1): RNN(\n",
+      "    (rnn): LSTM(200, 100, batch_first=True, dropout=0.5, bidirectional=True)\n",
       "  )\n",
-      "  (cnn2): CNN(\n",
-      "    (conv1d_list): ModuleList(\n",
-      "      (0): Conv1d(200, 100, kernel_size=(15,), stride=(1,))\n",
-      "      (1): Conv1d(200, 200, kernel_size=(21,), stride=(1,))\n",
-      "      (2): Conv1d(200, 100, kernel_size=(14,), stride=(1,))\n",
-      "    )\n",
+      "  (lstm2): RNN(\n",
+      "    (rnn): LSTM(200, 100, batch_first=True, dropout=0.5, bidirectional=True)\n",
       "  )\n",
-      "  (fc1): Linear(in_features=800, out_features=300, bias=True)\n",
+      "  (fc1): Linear(in_features=400, out_features=300, bias=True)\n",
       "  (fc2): Linear(in_features=300, out_features=2, bias=True)\n",
-      "  (dp1): Dropout(p=0.2, inplace=False)\n",
-      "  (dp2): Dropout(p=0.2, inplace=False)\n",
+      "  (dp1): Dropout(p=0.5, inplace=False)\n",
+      "  (dp2): Dropout(p=0.5, inplace=False)\n",
       ")\n"
      ]
     }
@@ -249,49 +255,49 @@
       "\n",
       " Epoch  |  Train Loss  | Train Acc  | Val Loss | Val Acc | Elapsed\n",
       "--------------------------------------------------------------------------------\n",
-      "   1    |   0.524505   | 72.444444  | 0.356814 | 83.15  | 20.37 \n",
-      "   2    |   0.367531   | 82.432099  | 0.292793 | 86.67  | 20.18 \n",
-      "   3    |   0.326544   | 84.510288  | 0.316835 | 86.70  | 20.24 \n",
-      "   4    |   0.312314   | 85.518519  | 0.272748 | 87.81  | 20.31 \n",
-      "   5    |   0.287882   | 86.864198  | 0.257756 | 89.41  | 20.14 \n",
-      "   6    |   0.272846   | 87.748971  | 0.251782 | 88.89  | 20.26 \n",
-      "   7    |   0.263317   | 88.172840  | 0.272955 | 87.48  | 19.98 \n",
-      "   8    |   0.248802   | 89.230453  | 0.248158 | 89.96  | 20.21 \n",
-      "   9    |   0.243757   | 89.477366  | 0.255687 | 88.44  | 19.97 \n",
-      "  10    |   0.238547   | 89.711934  | 0.243835 | 90.19  | 19.81 \n",
-      "  11    |   0.226808   | 90.366255  | 0.226069 | 90.52  | 20.12 \n",
-      "  12    |   0.223545   | 90.489712  | 0.221298 | 90.70  | 19.86 \n",
-      "  13    |   0.212955   | 90.958848  | 0.254848 | 89.74  | 19.85 \n",
-      "  14    |   0.213337   | 91.037037  | 0.262255 | 88.56  | 19.83 \n",
-      "  15    |   0.203298   | 91.288066  | 0.225899 | 91.00  | 19.82 \n",
-      "  16    |   0.197837   | 91.814815  | 0.229044 | 91.41  | 19.84 \n",
-      "  17    |   0.197451   | 91.687243  | 0.232600 | 90.52  | 19.82 \n",
-      "  18    |   0.190515   | 91.839506  | 0.224233 | 91.44  | 19.86 \n",
-      "  19    |   0.188969   | 92.127572  | 0.209162 | 92.33  | 19.84 \n",
-      "  20    |   0.187532   | 92.382716  | 0.208355 | 91.70  | 19.90 \n",
-      "  21    |   0.183975   | 92.473251  | 0.200648 | 92.26  | 19.97 \n",
-      "  22    |   0.178776   | 92.683128  | 0.213425 | 91.78  | 19.99 \n",
-      "  23    |   0.176887   | 92.641975  | 0.243116 | 90.44  | 20.20 \n",
-      "  24    |   0.182207   | 92.390947  | 0.216841 | 92.37  | 20.11 \n",
-      "  25    |   0.179747   | 92.555556  | 0.194081 | 92.67  | 20.09 \n",
-      "  26    |   0.174760   | 92.884774  | 0.213563 | 91.96  | 20.04 \n",
-      "  27    |   0.175566   | 92.884774  | 0.242485 | 89.74  | 20.12 \n",
-      "  28    |   0.172235   | 92.946502  | 0.207825 | 92.26  | 20.28 \n",
-      "  29    |   0.171458   | 93.152263  | 0.222492 | 91.26  | 20.30 \n",
-      "  30    |   0.174669   | 92.868313  | 0.193631 | 93.22  | 20.21 \n",
-      "  31    |   0.163856   | 93.308642  | 0.211523 | 91.78  | 20.27 \n",
-      "  32    |   0.163602   | 93.465021  | 0.216765 | 91.59  | 20.14 \n",
-      "  33    |   0.169583   | 93.020576  | 0.220941 | 91.63  | 20.19 \n",
-      "  34    |   0.164218   | 93.580247  | 0.216439 | 91.59  | 20.30 \n",
-      "  35    |   0.164338   | 93.444444  | 0.208943 | 91.67  | 20.33 \n",
-      "  36    |   0.169067   | 93.090535  | 0.202815 | 92.70  | 20.36 \n",
-      "  37    |   0.168703   | 93.152263  | 0.214640 | 91.93  | 20.33 \n",
-      "  38    |   0.164399   | 93.403292  | 0.208023 | 92.44  | 20.27 \n",
-      "  39    |   0.161347   | 93.386831  | 0.221126 | 92.19  | 20.15 \n",
-      "  40    |   0.161016   | 93.378601  | 0.195206 | 93.15  | 20.20 \n",
+      "   1    |   0.286497   | 89.111111  | 0.190453 | 93.67  | 37.98 \n",
+      "   2    |   0.198404   | 93.156379  | 0.155225 | 94.96  | 38.14 \n",
+      "   3    |   0.168802   | 94.102881  | 0.133788 | 95.15  | 37.95 \n",
+      "   4    |   0.152975   | 94.283951  | 0.128070 | 95.74  | 37.94 \n",
+      "   5    |   0.145939   | 94.526749  | 0.130579 | 95.37  | 38.12 \n",
+      "   6    |   0.139404   | 94.781893  | 0.122297 | 95.44  | 38.21 \n",
+      "   7    |   0.134683   | 95.090535  | 0.120333 | 95.22  | 38.04 \n",
+      "   8    |   0.131919   | 95.148148  | 0.127021 | 95.52  | 38.27 \n",
+      "   9    |   0.129080   | 95.275720  | 0.120378 | 95.33  | 38.33 \n",
+      "  10    |   0.123248   | 95.469136  | 0.121046 | 95.67  | 38.24 \n",
+      "  11    |   0.120397   | 95.576132  | 0.117072 | 95.78  | 37.95 \n",
+      "  12    |   0.118503   | 95.740741  | 0.117028 | 95.93  | 38.11 \n",
+      "  13    |   0.114057   | 95.724280  | 0.129221 | 95.63  | 37.94 \n",
+      "  14    |   0.112387   | 95.925926  | 0.121215 | 95.81  | 38.33 \n",
+      "  15    |   0.110016   | 96.094650  | 0.126801 | 95.89  | 38.27 \n",
+      "  16    |   0.109087   | 96.102881  | 0.117642 | 95.56  | 38.10 \n",
+      "  17    |   0.105849   | 96.057613  | 0.124921 | 95.63  | 38.30 \n",
+      "  18    |   0.104916   | 96.246914  | 0.122859 | 95.74  | 38.33 \n",
+      "  19    |   0.103765   | 96.312757  | 0.126798 | 95.89  | 38.16 \n",
+      "  20    |   0.102348   | 96.246914  | 0.124367 | 95.89  | 37.97 \n",
+      "  21    |   0.099698   | 96.378601  | 0.127742 | 95.15  | 38.11 \n",
+      "  22    |   0.099420   | 96.427984  | 0.119559 | 95.74  | 37.94 \n",
+      "  23    |   0.098033   | 96.530864  | 0.123566 | 95.85  | 38.06 \n",
+      "  24    |   0.093358   | 96.691358  | 0.141286 | 95.56  | 38.04 \n",
+      "  25    |   0.095688   | 96.658436  | 0.121084 | 95.96  | 38.16 \n",
+      "  26    |   0.090391   | 96.925926  | 0.122337 | 96.30  | 37.90 \n",
+      "  27    |   0.100083   | 96.251029  | 0.130010 | 95.78  | 38.14 \n",
+      "  28    |   0.093087   | 96.654321  | 0.118942 | 96.15  | 38.02 \n",
+      "  29    |   0.089700   | 96.786008  | 0.122968 | 96.00  | 38.22 \n",
+      "  30    |   0.087971   | 96.794239  | 0.123699 | 96.44  | 38.20 \n",
+      "  31    |   0.088152   | 96.958848  | 0.126344 | 95.85  | 38.24 \n",
+      "  32    |   0.084920   | 96.983539  | 0.121177 | 96.15  | 38.24 \n",
+      "  33    |   0.084485   | 97.024691  | 0.119660 | 95.93  | 38.20 \n",
+      "  34    |   0.080252   | 97.127572  | 0.124101 | 95.85  | 38.30 \n",
+      "  35    |   0.082135   | 97.135802  | 0.128348 | 96.00  | 37.95 \n",
+      "  36    |   0.080491   | 97.164609  | 0.127264 | 95.63  | 37.96 \n",
+      "  37    |   0.081522   | 97.069959  | 0.130882 | 95.78  | 38.10 \n",
+      "  38    |   0.079096   | 97.189300  | 0.131292 | 95.63  | 38.14 \n",
+      "  39    |   0.081743   | 97.098765  | 0.124740 | 96.07  | 38.17 \n",
+      "  40    |   0.075919   | 97.386831  | 0.145266 | 95.70  | 38.02 \n",
       "\n",
       "\n",
-      "Training complete! Best accuracy: 93.22%.\n"
+      "Training complete! Best accuracy: 96.44%.\n"
      ]
     }
    ],
@@ -318,16 +324,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test loss:  0.1744551310315728\n",
-      "test acc:  93.53333333333333\n",
+      "test loss:  0.1594668993493542\n",
+      "test acc:  95.39999999999999\n",
       "saved precision and recall results to file!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(tensor([1., 0., 0.,  ..., 1., 1., 1.], device='cuda:0'),\n",
-       " tensor([1., 0., 0.,  ..., 1., 1., 1.], device='cuda:0'))"
+       "(tensor([0., 1., 1.,  ..., 0., 0., 0.], device='cuda:0'),\n",
+       " tensor([0., 1., 1.,  ..., 0., 0., 0.], device='cuda:0'))"
       ]
      },
      "execution_count": 11,
